add styles to display logo component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,22 @@
-<h1>{{ title }}</h1>
-<nav>
-  <a routerLink="/display-logo">Display Logo</a>
-  <a routerLink="/when-does-he-play">When Does He Play</a>
-</nav>
-<router-outlet></router-outlet>
+<div class="app-container">
+  <div class="title">{{ title }}</div>
+  <nav>
+    <a routerLink="/display-logo"
+      ><button
+        [class.active]="selectedRoute === 'display-logo'"
+        (click)="onRouteSelect('display-logo')"
+      >
+        Draw Logo
+      </button></a
+    >
+    <a routerLink="/when-does-he-play"
+      ><button
+        [class.active]="selectedRoute === 'when-does-he-play'"
+        (click)="onRouteSelect('when-does-he-play')"
+      >
+        When Does He Play
+      </button></a
+    >
+  </nav>
+  <router-outlet></router-outlet>
+</div>
