--- a/src/app/display-logo/display-logo.component.html
+++ b/src/app/display-logo/display-logo.component.html
@@ -1,6 +1,10 @@
-<button (click)="drawAClub()">Draw teams</button>
+<div class="button-container">
+  <button class="drawTeam" (click)="drawAClub()">Draw your team</button>
+</div>
 
-<div *ngIf="title">{{ title }}</div>
-<div *ngIf="crest">
-  <img src="{{ crest }}" alt="Football Club" height="100" width="auto" />
+<div class="container">
+  <div class="title" *ngIf="title">{{ title }}</div>
+  <div class="crest" *ngIf="crest">
+    <img src="{{ crest }}" alt="Football Club" height="200" width="auto" />
+  </div>
 </div>
