add a new branch with dropdown list filled with players

--- a/src/app/when-does-he-play/when-does-he-play.component.html
+++ b/src/app/when-does-he-play/when-does-he-play.component.html
@@ -1,3 +1,15 @@
-<p>
-  when-does-he-play works!
-</p>
+<div class="form">
+  <mat-form-field>
+    <mat-label>Choose the player</mat-label>
+    <mat-select>
+      <mat-option value="5">Robert Lewandowski</mat-option>
+      <mat-option value="340">Jan Bednarek</mat-option>
+      <mat-option value="98">Krzysztof Piątek</mat-option>
+      <mat-option value="113">Arkadiusz Milik</mat-option>
+      <mat-option value="584">Karol Linetty</mat-option>
+      <mat-option value="4">Łukasz Piszczek</mat-option>
+      <mat-option value="341">Mateusz Klich</mat-option>
+      <mat-option value="322">Kamil Grosicki</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
