--- a/src/app/when-does-he-play/when-does-he-play.component.html
+++ b/src/app/when-does-he-play/when-does-he-play.component.html
@@ -6,6 +6,5 @@
     </mat-select>
   </mat-form-field>
 </div>
-<div *ngIf="nextMatchHomeTeam">
-  {{ nextMatchHomeTeam }} - {{nextMatchAwayTeam}}
-</div>
+<app-next-match-details [nextMatchDate]="nextMatchDate" [nextMatchHomeTeam]="nextMatchHomeTeam"
+  [nextMatchAwayTeam]="nextMatchAwayTeam"></app-next-match-details>
