--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -35,10 +35,13 @@ button {
 @media (max-width: 720px) and (orientation: portrait){
   .title {
     font-size: 10vw; 
-    margin: 5vh 5vw 0 5vw;
+    margin: 3vh 5vw 0 5vw;
   }    
   button {
     font-size: 5vw;
+  }
+  nav {
+    margin-top: 3vh;
   }
 }
 
